@@ -90,7 +90,13 @@ ImageSource::ImageSource()
 
 ImageSource::~ImageSource()
 {
+    clear();
+}
+
+void ImageSource::clear()
+{
     delete m_decoder;
+    m_decoder = 0;
 }
 
 bool ImageSource::initialized() const
